--- a/Planoutline.html
+++ b/Planoutline.html
@@ -2,7 +2,8 @@
 <html lang="en-us">
 <head>
  <meta charset="utf-8">
-<title>Page Title</title>
+<title>Project Plan Outline for 'First Time Pet Owners'</title>
+<link rel="stylesheet" href="css/design.css">
 </head>
 <body>
 
