--- a/Planoutline.html
+++ b/Planoutline.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Outline For Project</h1>
+<p>Method for Project: WaterFall</p>
 
 </body>
 </html>
