--- a/Planoutline.html
+++ b/Planoutline.html
@@ -6,9 +6,8 @@
 <link rel="stylesheet" href="css/design.css">
 </head>
 <body>
-
-<h1>Outline For Project</h1>
+<header><h1>Outline For Project</h1>
 <p>Method for Project: WaterFall</p>
-
+</header>
 </body>
 </html>
