--- a/Planoutline.html
+++ b/Planoutline.html
@@ -9,5 +9,9 @@
 <header><h1>Outline For Project</h1>
 <p>Method for Project: WaterFall</p>
 </header>
+<main>
+<h1>Idea for Website</h1>
+<p>The purpose of this project is to </p>
+</main>
 </body>
 </html>
