--- a/Planoutline.html
+++ b/Planoutline.html
@@ -15,7 +15,9 @@
 <p>Purpose
 	The purpose of this project is to help first time pet owners with the challenges of owning a pet for the first time (dogs and cats to be more specific). Agile method will best fit this project since I would need flexibility to change the website whenever needed. 
  </p>
+ <div id="agile">
  <img src="images/agile-method.png" alt="agile method">
+</div>
 </main>
 </body>
 </html>
