--- a/project.plan/planoutline.html
+++ b/project.plan/planoutline.html
@@ -2,6 +2,9 @@
 <html lang="en-us">
 <head>
  <meta charset="utf-8">
+ <style>
+	@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans+Condensed:wght@300&family=Pattaya&family=Poiret+One&display=swap');
+	</style>
 <title>Project Plan Outline for 'First Time Pet Owners'</title>
 <link rel="stylesheet" href="css/design.css">
 </head>
