--- a/project.plan/planoutline.html
+++ b/project.plan/planoutline.html
@@ -15,12 +15,39 @@
 <main>
 <h1>Idea for Website</h1>
 <h2>Purpose</h2>
-<p>Purpose
+<p>
 	The purpose of this project is to help first time pet owners with the challenges of owning a pet for the first time (dogs and cats to be more specific). Agile method will best fit this project since I would need flexibility to change the website whenever needed. 
  </p>
  <div id="agile">
  <img src="images/agile-method.png" alt="agile method">
 </div>
+
+
+<h1>
+	Font Styles
+</h1>
+<p>For font styles I have chose these four</p>
+<div class="title-page-font">
+	<P>This font is for the TITLE PAGE</P>
+</div>
+
+<div class="paragraph-font">
+	<p>This font is for PARAGRAPHS</p>
+</div>
+
+<div class="nav-font">
+	<p>This font is for the NAVIGATION BAR</p>
+</div>
+
+<div class="header-font">
+	<p> This font is for HEADERS</p>
+</div>
+<div id="color-layout">
+<h1>Color Scheme</h1>
+<p>For color scheme I wanted a more playful pallet. </p>
+<img scr="images/color-scheme.png" alt="color scheme for website">
+</div>
+
 </main>
 </body>
 </html>
