--- a/project.plan/planoutline.html
+++ b/project.plan/planoutline.html
@@ -45,7 +45,7 @@
 <div id="color-layout">
 <h1>Color Scheme</h1>
 <p>For color scheme I wanted a more playful pallet. </p>
-<img scr="images/color-scheme.png" alt="color scheme for website">
+<img src="images/color-scheme.png" alt="color scheme for website">
 </div>
 
 </main>
