--- a/project.plan/planoutline.html
+++ b/project.plan/planoutline.html
@@ -15,6 +15,14 @@
 
 </header>
 <main>
+
+	<ul>
+		<li><a href="#home">Home</a></li>
+		<li><a href="#catpage">News</a></li>
+		<li><a href="#dogpage">Contact</a></li>
+		<li><a href="#picgallery">About</a></li>
+	  </ul>
+	  
 		<div id="purpose">
 <h1>Idea for Website</h1>
 <h2>Purpose</h2>
