--- a/project.plan/planoutline.html
+++ b/project.plan/planoutline.html
@@ -5,23 +5,29 @@
  <style>
 	@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans+Condensed:wght@300&family=Pattaya&family=Poiret+One&display=swap');
 	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	
 <title>Project Plan Outline for 'First Time Pet Owners'</title>
 <link rel="stylesheet" href="css/design.css">
 </head>
 <body>
+	<figure>
+		<img src="images/petwebicon.png" alt="logo">
+	</figure>
 <header><h1>Outline For Project</h1>
 	<h2>By Alissa Corona</h2>
 <p>Method for Project: WaterFall</p>
 
 </header>
 <main>
-
-	<ul>
-		<li><a href="#home">Home</a></li>
-		<li><a href="#catpage">News</a></li>
-		<li><a href="#dogpage">Contact</a></li>
-		<li><a href="#picgallery">About</a></li>
-	  </ul>
+	
+	<div class="nav">
+		<a class="active" href="#home">Home</a>
+		<a href="#catpage">CatPage</a>
+		<a href="#dogpage">DogPage</a>
+		<a href="#picgallary">PicGallary</a>
+	  </div>
 	  
 		<div id="purpose">
 <h1>Idea for Website</h1>
@@ -55,7 +61,7 @@
 </div>
 <div id="color-layout">
 <h1>Color Scheme</h1>
-<p>For color schSeme I wanted a more playful pallet. </p>
+<p>For color scheme I wanted a more playful pallet. </p>
 <img  src="images/color-scheme.png" alt="color scheme for weSbsite" class="color-scheme">
 </div>
 </div>
