--- a/project.plan/planoutline.html
+++ b/project.plan/planoutline.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<figure>
-		<img src="images/petwebicon.png" alt="logo">
+		<img src="images/logo.jpg" alt="logo">
 	</figure>
 <header><h1>Outline For Project</h1>
 	<h2>By Alissa Corona</h2>
