--- a/project.plan/planoutline.html
+++ b/project.plan/planoutline.html
@@ -22,12 +22,12 @@
 </header>
 <main>
 	
-	<div class="nav">
-		<a class="active" href="#home">Home</a>
-		<a href="#catpage">CatPage</a>
-		<a href="#dogpage">DogPage</a>
-		<a href="#picgallary">PicGallary</a>
-	  </div>
+	<li><a class="ham">&#9776; Menu</a></li>
+	<a href="pwmain.html">Home</a>
+	<a  href="catpage.html">CatPage</a>
+	<a href="dogpage.html">DogPage</a>
+	<a href="picgallary.html">PicGallary</a>
+	<a class="active" href="petwebsiteoutline.html">outline</a>
 	  
 		<div id="purpose">
 <h1>Idea for Website</h1>
